force-app/main/default/objects/SFDC_Benefit__c/SFDC_Benefit__c.object-meta.xml
<CustomObject>
    <label>Benefit</label>
    <nameField>
        <displayFormat>BENEFIT-{00000}</displayFormat>
        <label>Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>