force-app/main/default/objects/SFDC_Benefit__c/fields/Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Plan__c</fullName>
    <label>Benefit Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Benefit_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Health Savings</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>CHiP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>