force-app/main/default/objects/SFDC_Benefit__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>R00N30000001eUPLEA2</relationshipName>
    <type>Lookup</type>
</CustomField>