force-app/main/default/objects/SFDC_Benefit__c/fields/Months_for_Plan__c.field-meta.xml
<CustomField>
    <fullName>Months_for_Plan__c</fullName>
    <label># Months for Plan</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>