force-app/main/default/objects/SFDC_Benefit__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <formula>Plan_Start_Date__c  + Months_for_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>