force-app/main/default/objects/SFDC_Benefit__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>