force-app/main/default/objects/SFDC_Benefit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee__c</columns>
    <columns>Benefit_Type__c</columns>
    <columns>Benefit_Plan__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>