force-app/main/default/objects/SFDC_Benefit__c/listViews/AllDentalHealthPlans.listView-meta.xml
<ListView>
    <fullName>AllDentalHealthPlans</fullName>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Benefit_Plan__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Benefit_Type__c</field>
        <operation>equals</operation>
        <value>Dental Insurance</value>
    </filters>
    <label>All Dental Health Plans</label>
</ListView>