force-app/main/default/objects/SFDC_Benefit__c/listViews/AllHealthInsuranceBenefits.listView-meta.xml
<ListView>
    <fullName>AllHealthInsuranceBenefits</fullName>
    <columns>Employee__c</columns>
    <columns>Benefit_Plan__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Benefit_Type__c</field>
        <operation>equals</operation>
        <value>Health Insurance</value>
    </filters>
    <label>All Health Insurance Benefits</label>
</ListView>